--- a/package.json
+++ b/package.json
@@ -13,18 +13,21 @@
   "dependencies": {
     "@angular/animations": "~10.0.4",
     "@angular/cdk": "^10.1.0",
-    "@angular/common": "~10.0.4",
+    "@angular/common": "^10.0.5",
     "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
+    "@angular/core": "^10.0.5",
+    "@angular/forms": "^10.0.5",
     "@angular/localize": "~10.0.4",
     "@angular/material": "^10.1.0",
-    "@angular/platform-browser": "~10.0.4",
+    "@angular/platform-browser": "^10.0.5",
     "@angular/platform-browser-dynamic": "~10.0.4",
     "@angular/router": "~10.0.4",
+    "@editorjs/editorjs": "^2.18.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
-    "rxjs": "~6.5.5",
+    "ngx-quill": "^12.0.1",
+    "quill": "^1.3.7",
+    "rxjs": "^6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
