--- a/angular.json
+++ b/angular.json
@@ -64,7 +64,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ck2book:build"
+            "browserTarget": "ck2book:build",
+            "proxyConfig": "src/proxy.conf.json"
           },
           "configurations": {
             "production": {
