--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
     "ngx-quill": "^12.0.1",
+    "ngx-socket-io": "^3.2.0",
     "ngx-webstorage-service": "^4.1.0",
     "quill": "^1.3.7",
     "rxjs": "^6.5.5",
