--- a/package.json
+++ b/package.json
@@ -11,17 +11,17 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
-    "@angular/cdk": "^10.1.0",
-    "@angular/common": "^10.0.5",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "^10.0.5",
-    "@angular/forms": "^10.0.5",
-    "@angular/localize": "~10.0.4",
-    "@angular/material": "^10.1.0",
-    "@angular/platform-browser": "^10.0.5",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
+    "@angular/animations": "^10.0.7",
+    "@angular/cdk": "^10.1.1",
+    "@angular/common": "^10.0.7",
+    "@angular/compiler": "^10.0.7",
+    "@angular/core": "^10.0.7",
+    "@angular/forms": "^10.0.7",
+    "@angular/localize": "^10.0.7",
+    "@angular/material": "^10.1.1",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/router": "^10.0.7",
     "@editorjs/editorjs": "^2.18.0",
     "@material/image-list": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
@@ -29,18 +29,18 @@
     "ngx-quill": "^12.0.1",
     "ngx-webstorage-service": "^4.1.0",
     "quill": "^1.3.7",
-    "rxjs": "^6.5.5",
+    "rxjs": "^6.6.2",
     "ts-md5": "^1.2.7",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^12.11.1",
+    "@angular-devkit/build-angular": "^0.1000.4",
+    "@angular/cli": "^10.0.4",
+    "@angular/compiler-cli": "^10.0.7",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.53",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
