--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@material/image-list": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "bootstrap": "^4.5.0",
+    "jquery": "^3.5.1",
     "ngx-quill": "^12.0.1",
     "ngx-webstorage-service": "^4.1.0",
     "quill": "^1.3.7",
