--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@editorjs/editorjs": "^2.18.0",
     "@material/image-list": "^7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "@types/jquery": "^3.5.1",
     "bootstrap": "^4.5.0",
     "jquery": "^3.5.1",
     "ngx-quill": "^12.0.1",
