--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@types/jquery": "^3.5.1",
     "bootstrap": "^4.5.0",
+    "file-saver": "^2.0.2",
     "jquery": "^3.5.1",
     "ngx-quill": "^12.0.1",
     "ngx-webstorage-service": "^4.1.0",
@@ -40,6 +41,7 @@
     "@angular-devkit/build-angular": "^0.1000.4",
     "@angular/cli": "^10.0.4",
     "@angular/compiler-cli": "^10.0.7",
+    "@types/file-saver": "^2.0.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.12.53",
